Fix white background not stretching to the bottom of the page.

--- a/public/stylesheets/loggedInstyle.css
+++ b/public/stylesheets/loggedInstyle.css
@@ -10,8 +10,9 @@ hr.style1 {
 .content-container {
     background-color: #FFFFFF;
     width: 80%;
-    height: 100%;
     margin: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .btn-teal {
