--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: "Roboto", sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 hr.style1 {
